--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             background-color: #2d2d2d;
             color: #fff;
             font-family: 'Arial', sans-serif;
-            margin: 0; /* Remove default margin for body */
+            margin: 0;
         }
 
         .container {
@@ -24,7 +24,7 @@
             align-items: center;
             min-height: 100vh;
             padding: 20px;
-            box-sizing: border-box; /* Include padding in the element's total width and height */
+            box-sizing: border-box;
         }
 
         h1,
@@ -41,7 +41,7 @@
             color: #ffffff;
         }
 
-        img {
+        video {
             max-width: 100%;
             height: auto;
             margin-bottom: 20px;
@@ -58,10 +58,13 @@
 <body>
     <div style="align-items: flex-end;">Project by: <b>Parthiv Shah</b></div>
     <div class="container">
-        <h1>Multipage Online Coffee Shop</h1>
+        <h1>Movie Review Webapp</h1>
         <br>
         <h2>Demo</h2>
-        <img src="7b29a3c4-1182-4c0b-a8e9-c8233da29257.gif" alt="UrbanCoffee" class="img-fluid">
+        <video controls autoplay loop class="img-fluid">
+            <source src="your-video-file.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
         <p>See on PC or Laptop for a better view</p>
     </div>
 
