--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <body>
     <div style="align-items: flex-end;">Project by: <b>Parthiv Shah</b></div>
     <div class="container">
-        <h1>Movie Review Webapp</h1>
+        <h1>Multipage Coffee Shop</h1>
         <br>
         <h2>Demo</h2>
         <video controls autoplay loop class="img-fluid">
